DataModel diagram and related changes with templates

--- a/falcon/conf/template/flyway.dev.conf
+++ b/falcon/conf/template/flyway.dev.conf
@@ -17,12 +17,12 @@
 # Jdbc url to use to connect to the database
 # Examples
 # --------
-flyway.url=jdbc:oracle:thin:@localhost:1521:xe
+flyway.url=@db.url@
 
-flyway.user=falcon
+flyway.user=@db.username@
 
 # Password to use to connect to the database. Flyway will prompt you to enter it if not specified.
-flyway.password=falcon
+flyway.password=@db.password@
 
 # Comma-separated list of schemas managed by Flyway. These schema names are case-sensitive.
 # (default: The default schema for the datasource connection)
