--- a/falcon/build.xml
+++ b/falcon/build.xml
@@ -7,8 +7,10 @@
 
     <property file="${basedir}/build.properties"/>
     <property name="db.lib" value="drivers"/>
+    <property name="flyway.conf.dir" value="${basedir}/conf"/>
     <property name="jdbc.driver.classpath" value="${db.lib}/ojdbc7.jar"/>
 
+<!-- Create a schema for the name provided in the build.properties file, schema is same as user -->
   <target name="createschema" description="create a schema as defined in the user properties">
     <echo message="Admin UserName: ${db.system.username}"/>
     <echo message="Creating Schema: ${db.username}"/>
@@ -19,8 +21,10 @@
         GRANT CREATE VIEW TO ${db.username};
         ALTER USER ${db.username} DEFAULT ROLE ALL;
     </sql>
+    <antcall target="dbset"/>
   </target>
 
+<!-- Drop the schema created by the application -->
   <target name="dropschema">
       <echo message="Admin UserName: ${db.system.username}"/>
       <echo message="Working UserName: ${db.username}"/>
@@ -29,6 +33,8 @@
           DROP USER ${db.username} cascade ;
       </sql>
   </target>
+
+  <!-- Create database code objects int he database -->
   <target name="dbcode">
       <sql driver="${db.driver.name}"
            url="${db.url}"
@@ -38,6 +44,8 @@
           <fileset dir="code" includes="R__view*.sql"/>
       </sql>
   </target>
+
+  <!-- populates test data in the database -->
   <target name="testdata">
       <sql driver="${db.driver.name}"
            url="${db.url}"
@@ -47,4 +55,27 @@
           <fileset dir="testdata" includes="*.sql"/>
       </sql>
   </target>
+
+  <!-- Simulates schema SQL Usage for apps -->
+  <target name="usage">
+      <sql driver="${db.driver.name}"
+           url="${db.url}"
+           userid="${db.username}"
+           password="${db.password}"
+           classpath="${jdbc.driver.classpath}" delimiter=";">
+          <fileset dir="usage" includes="*.sql"/>
+      </sql>
+  </target>
+
+  <target name="dbset" description="sets the username and password based on build.properties">
+      <echo message="Flyway now working with DB: ${db.username}"/>
+      <!-- copying template file to destination -->
+      <copy file="${flyway.conf.dir}/template/flyway.dev.conf" todir="${flyway.conf.dir}" overwrite="true"/>
+      <move file="${flyway.conf.dir}/flyway.dev.conf" tofile="${flyway.conf.dir}/flyway.conf" overwrite="true"/>
+      <!--update settings from build.prop file-->
+      <replace file="${flyway.conf.dir}/flyway.conf" token="@db.username@" value="${db.username}"/>
+      <replace file="${flyway.conf.dir}/flyway.conf" token="@db.password@" value="${db.password}"/>
+      <replace file="${flyway.conf.dir}/flyway.conf" token="@db.url@" value="${db.url}"/>
+  </target>
+
 </project>
