--- a/falcon/conf/flyway.conf
+++ b/falcon/conf/flyway.conf
@@ -19,10 +19,10 @@
 # --------
 flyway.url=jdbc:oracle:thin:@localhost:1521:xe
 
-flyway.user=falcon
+flyway.user=cruise
 
 # Password to use to connect to the database. Flyway will prompt you to enter it if not specified.
-flyway.password=falcon
+flyway.password=cruise
 
 # Comma-separated list of schemas managed by Flyway. These schema names are case-sensitive.
 # (default: The default schema for the datasource connection)
